--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
 		<meta name="description" content="Conteúdo do nosso site">
 		<meta name="keywords" content="palavras,separadas,por,vírgula">
 		<meta name="author" content="Paulo Sérgio"/>
-		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Aplicativo Webjobs</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
 </head>
 <body>
 
+	<header>
+		<div class="container-flex">
+			<div class="logo">
+				
+			</div><!--logo-->
+		</div><!--container-flex-->
+	</header>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
