--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<meta charset="utf-8">
@@ -8,19 +8,39 @@
 		<meta name="author" content="Paulo Sérgio"/>
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
 	<title>Aplicativo Webjobs</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
 </head>
 <body>
 
 	<header>
 		<div class="container-flex">
 			<div class="logo">
-				
+				<h1>webJobs</h1>
+				<div class="form-check form-switch">
+				  	<input class="form-check-input" type="checkbox" id="flexSwitchCheckDisabled" disabled>
+  					<label class="form-check-label" for="flexSwitchCheckDisabled"></label>
+				</div>
+					<nav class="navbar navbar-light bg-light">
+  		<div class="container-fluid">
+    <form class="d-flex">
+      <input class="form-control me-2" type="search" placeholder="Filtrar por títulos, empresas, experiência" aria-label="Search">
+      <input class="form-control me-2" type="search" placeholder="Filtrar pela localizção" aria-label="Search">
+       		<div class="mb-3 form-check">
+	   			<input type="checkbox" class="form-check-input" id="exampleCheck1">
+	    		<label class="form-check-label" for="exampleCheck1">CLT</label>
+  			</div>
+      <button class="btn btn-outline-success" type="submit" background-color:royalblue>Procurar</button>
+    </form>
+  </div>
+</nav>
 			</div><!--logo-->
 		</div><!--container-flex-->
 	</header>
+	
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
