--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<meta charset="utf-8">
@@ -15,91 +15,60 @@
 <body>
 
 	<header>
-		<div class="container-flex">
-			<div class="logo">
-				<h1>webJobs</h1>
+		<div class="logo" >
+			<h1>WebJobs</h1>
 				<div class="form-check form-switch">
-				  	<input class="form-check-input" type="checkbox" id="flexSwitchCheckDisabled" disabled>
+				  	<input class="form-check-input" type="checkbox" id="flexSwitchCheckDisabled" >
   					<label class="form-check-label" for="flexSwitchCheckDisabled"></label>
 				</div>
 					<nav class="navbar navbar-light bg-light">
-  		<div class="container-fluid">
-    <form class="d-flex">
-      <input class="form-control me-2" type="search" placeholder="Filtrar por títulos, empresas, experiência" aria-label="Search">
-     <input class="form-control me-2" type="search" placeholder="Filtrar pela localizção" aria-label="Search">
-       		<div class="mb-3 form-check">
-	   			<input type="checkbox" class="form-check-input" id="exampleCheck1">
-	    		<label class="form-check-label" for="exampleCheck1">CLT</label>
-  			</div>
-      <button type="button" class="btn btn-primary">Procurar</button>
-    </form>
-  </div>
-</nav>
-			</div><!--logo-->
-		</div><!--container-flex-->
+						<div class="container-fluid">
+						<form class="d-flex">
+						<input class="form-control me-2" type="search" placeholder="Filtrar por títulos, empresas, experiência" aria-label="Search">
+						<input class="form-control me-2" type="search" placeholder="Filtrar pela localizção" aria-label="Search">
+						<div class="mb-3 form-check">
+							<input type="checkbox" class="form-check-input" id="exampleCheck1">
+							<label class="form-check-label" for="exampleCheck1">CLT</label>
+						</div>
+				<button type="button" class="btn btn-primary">Procurar</button>
+				</form>
+			</div>
+			</nav>
 	</header>
 
 	<div class="row">
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Desenvolvedor Front-End</h5>
-        <p class="card-text">Atuara com desenvolvedor Front-End HTML, CSS, JavaScript </p>
-        <a href="#" class="btn btn-primary">Ver Mais</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Desenvolvedor Front-End</h5>
-        <p class="card-text">Atuara com desenvolvedor Front-End HTML, CSS, JavaScript </p>
-        <a href="#" class="btn btn-primary">Ver Mais</a>
-      </div>
-    </div>
-  </div>
+		<div class="col-sm-6">
+		  <div class="card">
+			<img src="assets/logos/coffeeroasters.svg" alt="">
+			<div class="card-body">
+			  <h5 class="card-title">Desenvolvedor Front-End</h5>
+			  <p class="card-text">Atuara com desenvolvedor Front-End HTML, CSS, JavaScript </p>
+			  <a href="#" class="btn btn-primary">Ver Mais</a>
+			</div>
+		  </div>
+		</div>
+		<div class="col-sm-6">
+		  <div class="card">
+			<img src="assets/logos/maker.svg" alt="">
+			<div class="card-body">
+			  <h5 class="card-title">Desenvolvedor Front-End</h5>
+			  <p class="card-text">Atuara com desenvolvedor Front-End HTML, CSS, JavaScript </p>
+			  <a href="#" class="btn btn-primary">Ver Mais</a>
+			</div>
+		  </div>
+		</div>
+		<div class="col-sm-6">
+			<div class="card">
+			  <img src="assets/logos/maker.svg" alt="">
+			  <div class="card-body">
+				<h5 class="card-title">Desenvolvedor Front-End</h5>
+				<p class="card-text">Atuara com desenvolvedor Front-End HTML, CSS, JavaScript </p>
+				<a href="#" class="btn btn-primary">Ver Mais</a>
+			  </div>
+			</div>
+		  </div>
+	</div>
 
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Desenvolvedor Front-End</h5>
-        <p class="card-text">Atuara com desenvolvedor Front-End HTML, CSS, JavaScript </p>
-        <a href="#" class="btn btn-primary">Ver Mais</a>
-      </div>
-    </div>
-  </div>
-</div>
-
-	<div class="row">
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Desenvolvedor Front-End</h5>
-        <p class="card-text">Atuara com desenvolvedor Front-End HTML, CSS, JavaScript </p>
-        <a href="#" class="btn btn-primary">Ver Mais</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Desenvolvedor Front-End</h5>
-        <p class="card-text">Atuara com desenvolvedor Front-End HTML, CSS, JavaScript </p>
-        <a href="#" class="btn btn-primary">Ver Mais</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Desenvolvedor Front-End</h5>
-        <p class="card-text">Atuara com desenvolvedor Front-End HTML, CSS, JavaScript </p>
-        <a href="#" class="btn btn-primary">Ver Mais</a>
-      </div>
-    </div>
-  </div>
-</div>
 	
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
