--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 <body>
 
+	
+
 	<header>
 		<div class="logo" >
 			<h1>WebJobs</h1>
@@ -33,43 +35,13 @@
 				<button type="button" class="btn btn-primary">Procurar</button>
 				</form>
 			</div>
-			</nav>
 	</header>
 
-	<div class="row">
-		<div class="col-sm-6">
-		  <div class="card">
-			<img src="assets/logos/coffeeroasters.svg" alt="">
-			<div class="card-body">
-			  <h5 class="card-title">Desenvolvedor Front-End</h5>
-			  <p class="card-text">Atuara com desenvolvedor Front-End HTML, CSS, JavaScript </p>
-			  <a href="#" class="btn btn-primary">Ver Mais</a>
-			</div>
-		  </div>
-		</div>
-		<div class="col-sm-6">
-		  <div class="card">
-			<img src="assets/logos/maker.svg" alt="">
-			<div class="card-body">
-			  <h5 class="card-title">Desenvolvedor Front-End</h5>
-			  <p class="card-text">Atuara com desenvolvedor Front-End HTML, CSS, JavaScript </p>
-			  <a href="#" class="btn btn-primary">Ver Mais</a>
-			</div>
-		  </div>
-		</div>
-		<div class="col-sm-6">
-			<div class="card">
-			  <img src="assets/logos/maker.svg" alt="">
-			  <div class="card-body">
-				<h5 class="card-title">Desenvolvedor Front-End</h5>
-				<p class="card-text">Atuara com desenvolvedor Front-End HTML, CSS, JavaScript </p>
-				<a href="#" class="btn btn-primary">Ver Mais</a>
-			  </div>
-			</div>
-		  </div>
-	</div>
+	<div id="empregos" ></div>
+		
+	
 
 	
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+	<script src="scripts.js" type="text/javascript"></script>
 </body>
 </html>
