--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<nav class="navbar navbar-light bg-light">
 						<div class="container-fluid">
 						<form class="d-flex">
-						<input class="form-control me-2" type="search" placeholder="Filtrar por títulos, empresas, experiência" aria-label="Search">
+						<input class="form-control me-2" type="search" placeholder="Filtrar por títulos, empresas, experiência" aria-label="Search" width="19rem">
 						<input class="form-control me-2" type="search" placeholder="Filtrar pela localizção" aria-label="Search">
 						<div class="mb-3 form-check">
 							<input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -39,10 +39,6 @@
 
 	
 	<div id="empregos"></div>
-	
-	
-	
-
 	
 	<script src="scripts.js" type="text/javascript"></script>
 </body>
