--- a/index.html
+++ b/index.html
@@ -1,45 +1,104 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-	<link rel="stylesheet" type="text/css" href="css/style.css"/>
-		<meta charset="utf-8">
-		<meta name="description" content="Conteúdo do nosso site">
-		<meta name="keywords" content="palavras,separadas,por,vírgula">
-		<meta name="author" content="Paulo Sérgio"/>
-		<meta name="viewport" content="width=device-width,initial-scale=1" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+<html lang="en">
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <meta charset="utf-8" />
+    <meta name="description" content="Conteúdo do nosso site" />
+    <meta name="keywords" content="palavras,separadas,por,vírgula" />
+    <meta name="author" content="Paulo Sérgio" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,maximum-scale=1.0"
+    />
+    <title>Formulário</title>
+  </head>
+  <body>
+    <div class="container">
+      <form id="form" class="form">
+        <div class="form-control">
+          <label for="username">Nome</label>
+          <input
+            type="text"
+            name="nome"
+            id="username"
+            oninput=" checkInputs()"
+            placeholder="Nome"
+          />
+          <i class="fas fa-exclamation-circle"></i>
+          <i class="fas fa-check-circle"></i>
+          <small>Mensagem de erro</small>
+        </div>
 
-	<title>Aplicativo Webjobs</title>
-</head>
-<body>
+        <div class="form-control">
+          <label for="cpf">CPF</label>
+          <input
+            type="text"
+            id="cpf"
+            maxlength="14"
+            oninput="checkInputs()"
+            placeholder="CPF"
+          />
+          <i class="fas fa-exclamation-circle"></i>
+          <i class="fas fa-check-circle"></i>
+          <small>Mensagem de erro</small>
+        </div>
 
-	
+        <div class="form-control">
+          <label for="email">Email</label>
+          <input
+            type="text"
+            id="email"
+            placeholder="Email"
+            oninput=" checkInputs()"
+          />
+          <i class="fas fa-exclamation-circle"></i>
+          <i class="fas fa-check-circle"></i>
+          <small>Mensagem de erro</small>
+        </div>
 
-	<header>
-		<div class="logo" >
-			<h1>WebJobs</h1>
-				<div class="form-check form-switch">
-				  	
-  					<label class="form-check-label" for="flexSwitchCheckDisabled"></label>
-				</div>
-					<nav class="navbar navbar-light bg-light">
-						<div class="container-fluid">
-						<form class="d-flex">
-						<input class="form-control me-2" type="search" placeholder="Filtrar por títulos, empresas, experiência" aria-label="Search" width="19rem">
-						<input class="form-control me-2" type="search" placeholder="Filtrar pela localizção" aria-label="Search">
-						<div class="mb-3 form-check">
-							<input type="checkbox" class="form-check-input" id="exampleCheck1">
-							<label class="form-check-label" for="exampleCheck1">CLT</label>
-						</div>
-				<button type="button" class="btn btn-primary">Procurar</button>
-				</form>
-			</div>
-	</header>
+        <div class="formcontrol">
+          <label>Data de Nascimento</label><br />
+          <input type="date" id="data" data-rules="required" /><br />
+        </div>
 
-	
-	<div id="empregos"></div>
-	
-	<script src="scripts.js" type="text/javascript"></script>
-</body>
+        <label for="Genero">Genero</label><br />
+        <input type="radio" name="sexo" id="genero" value="M" />
+        <label>Masculino</label>
+        <input type="radio" name="sexo" id="genero" value="F" />
+        <label>feminino</label>
+
+        <div class="form-control">
+          <label for="password">Senha</label>
+          <input type="password" id="password" oninput=" checkInputs()" />
+          <i class="fas fa-exclamation-circle"></i>
+          <i class="fas fa-check-circle"></i>
+          <small>Mensagem de erro</small>
+        </div>
+
+        <div class="form-control">
+          <label for="password-confirmation">Confirmação de Senha</label>
+          <input
+            type="password"
+            id="password-confirmation"
+            oninput="checkInputs()"
+          />
+          <i class="fas fa-exclamation-circle"></i>
+          <i class="fas fa-check-circle"></i>
+          <small>Mensagem de erro</small>
+        </div>
+
+        <button type="submit" value="submit" id="submit" onclick="submit">
+          Enviar
+        </button>
+      </form>
+    </div>
+    <script
+      src="https://kit.fontawesome.com/be2732a2be.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <script type="text/javascript" src="script.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
+  </body>
 </html>
